# agents

./: README.md  SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
scripts/: bootstrap_machine.sh  run_worker.py
src/yieldthought_agents/: __init__.py  github.py  shell.py  worker.py
src/yieldthought_agents/tasks/: __init__.py  functional_bringup.py  functional_bringup.txt
tests/: conftest.py  test_utils.py
