[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yieldthought-agents"
version = "0.1.0"
description = "Automation for TTNN model bringup."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["codexapi>=0.1.3"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
yt-bringup-worker = "yieldthought_agents.worker:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
